hphp/test/slow/unset/unset_private_prop.php.expectf

Fatal error: Cannot unset inaccessible property in %s on line 9
